tests/semantic/invalid/self_initializer.mc
int value = value + 1;
print value;
